# gpu-telemetry

./: .dockerignore  .flake8  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .isort.cfg  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  artifacthub-repo.yml  dev-requirements.txt  index.html  index.yaml  l9gpu-0.1.0.tgz  mypy.ini  noxfile.py  pyproject.toml
.github/: artifacthub-repo.yml  cr.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: chart-release.yml  ci.yml  collector-release.yml  release.yml
alerts/grafana/: fleet-alerts.json  gpu-infrastructure-alerts.json  llm-inference-alerts.json
alerts/prometheus/: fleet-alerts.yaml  gpu-infrastructure-alerts.yaml  llm-inference-alerts.yaml
dashboards/grafana/: 00-multi-cluster-fleet.json  01-eks-gpu-fleet-overview.json  02-eks-gpu-workload.json  03-eks-gpu-health.json  04-eks-gpu-single-gpu.json  05-eks-gpu-dcgm.json  06-gpu-profiling-demo.json
deploy/collector/: Dockerfile  builder-config.yaml  config.example.yaml
deploy/demo/: 00-namespace.yaml  03-inference-engines.yaml  04-l9gpu-monitors.yaml  eks-cluster.yaml  launch.sh
docker/: Dockerfile
docs/: ARCHITECTURE.md  AWS_TESTING.md  COLLECTOR.md  GPU_LLM_OBSERVABILITY.md  HELM.md  INTEGRATION.md  K8S_WORKLOAD_ATTRIBUTION.md  METRICS.md  RELEASING.md  SCALING.md
k8shelper/: config.go  go.mod  go.sum  k8shelper.go  k8shelper_test.go
k8sprocessor/: common.go  config.go  factory.go  go.mod  go.sum  logs.go  metrics.go  traces.go
l9gpu/: README.md  __init__.py  _version.py
l9gpu/docs/: adding_new_collector.md  adding_new_exporter.md  adding_new_health_check.md  health_checks_deep_dive.md  health_checks_onboarding.md  release.md  telemetry_types.md
l9gpu/exporters/: __init__.py  (+7 more)
scripts/: gpu_stress_job.yaml  run_load.sh  vllm_load.py
shelper/: CONTRIBUTING.md  README.md  cache_helpers.go  cache_helpers_test.go  config.go  config_enum_test.go  entrypoint.go  go.mod  host.go  local.go  local_test.go  nvidia_smi.go  nvidia_smi_test.go  proc_helpers.go  proc_helpers_test.go  scontrol.go  slurm_helpers.go  slurm_helpers_test.go  squeue.go
slurmprocessor/: CONTRIBUTING.md  README.md  common.go  config.go  config_test.go  factory.go  go.mod  go.sum  logs.go  metrics.go  traces.go
systemd/: hc_resources.slice  sacct_backfill.service  sacct_running.service  scontrol.service  slurm_job_monitor.service  slurm_monitor.service  storage.service
(+276 files in other folders)
