[build-system]
requires = ["setuptools>=80", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "l9gpu"
readme = "README.md"
description = "Last9 GPU Telemetry: Vendor-Agnostic GPU Monitoring for AI Clusters"
requires-python = ">=3.10"
dependencies = [
  # TODO: Unpin the requests version
  "requests==2.33.0",
  "pynvml==11.4.*",
  "typing_extensions",
  "click==8.0.4",
  "typeguard==2.13.3",
  "click-option-group",
  "pydantic==2.12.5",
  "omegaconf~=2.2",
  "tomli~=2.0",
  "certifi>=2024.02.02",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "gni>=0.1.3",
  "psutil",
  "cffi",
  "python-daemon",
]
dynamic = ["version"]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/last9/gpu-telemetry"

[project.optional-dependencies]
amd = ["amdsmi"]
gaudi = []   # no Python package, pure CLI parsing
k8s = ["kubernetes>=29.0.0"]

dev = [
  "parameterized",
  "virtualenv>=20.28.1",
  "flake8==7.1.1",
  "black>=24.3.0",
  "ufmt==2.5.0",
  "usort==1.0.5",
  "nox==2024.04.15",
  "isort",
  "twine",
  "pip-tools",
  "pre-commit",
  "pytest",
  "pytest-mock",
  "mypy==1.7.0",
  "requests-mock",
  "pytest-subprocess",
  "types-requests",
  "build",
  "toml",
  "types-toml",
  "pep8-naming",
  "flake8-tidy-imports",
  "python-dotenv",
  "pytest-xdist[psutil]",
  "cryptography>=43.0.1",
  "types-psutil",
]

[project.scripts]
l9gpu = "l9gpu.monitoring.cli.l9gpu:main"
health_checks = "l9gpu.health_checks.cli.health_checks:health_checks"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["l9gpu*"]
exclude = [
  "l9gpu/tests",
  "l9gpu/tests.*",
]

[tool.setuptools.dynamic]
version = { attr = "l9gpu._version.__version__" }

[tool.setuptools.package-data]
l9gpu = ["py.typed", "version.txt"]

[tool.usort]
first_party_detection = false

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | l9gpu/gen
  )/
)
'''

[tool.pyright]
include = [
  "bin",
  "l9gpu",
  "l9gpu_exporters",
  "l9gpu_schemas",
  "health_checks",
  "tests",
]
exclude = [
  "build",
  "**/__pycache__",
]
